# PackSo

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wlwoon/packso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-array.cpp  lame_3.cpp  native-lib.cpp
app/src/main/java/com/wlwoon/libso/: LameManager.java
app/src/main/java/com/wlwoon/packso/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/wlwoon/packso/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
